--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/kanru/rage-wasm"
   },
   "scripts": {
-    "build": "RUSTFLAGS='-C target-feature=+atomics,+bulk-memory,+mutable-globals' rollup -c rollup.config.mjs",
+    "build": "RUSTFLAGS='-C target-feature=+atomics,+bulk-memory,+mutable-globals' rollup -c rollup.config.mjs && rollup -c rollup-node.config.mjs",
     "test": "web-test-runner tests/**/*.test.js --node-resolve --playwright --browsers chromium firefox webkit",
     "clean": "cargo clean"
   },
